tests/error/misc_errors/callable_not_list1.err
Error: Invalid type (at $FILE:7:12)
  | 
5 | 
6 | @guppy.declare
7 | def foo(f: "Callable[int, float, bool]") -> None: ...
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid `Callable` type

Help: Callable types are specified as follows: `Callable[[<arguments>], <return
type>]`

Guppy compilation failed due to 1 previous error
